--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "name": "Filterable Portfolio",
-  "short_name": "Portfolio",
+  "name": "Eternus Global Filterable Portfolio",
+  "short_name": "Eternus Portfolio",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#fff",
   "theme_color": "#2563eb",
   "orientation": "portrait",
-  "description": "Filterable Portfolio by Industry, Format, and Tags",
+  "description": "Eternus Global Filterable Portfolio by Industry, Format, and Tags",
   "icons": [
     {
       "src": "./img/logo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "maskable"
+      "purpose": "any"
     }
   ]
 }
