--- a/manifest.json
+++ b/manifest.json
@@ -12,7 +12,7 @@
       "src": "./img/eternuslogo.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any"
+      "purpose": "maskable any"
     }
   ]
 }
